# projet-rattrapage

./: .gitignore  README.md  ROS2_101.md  examples.md  gazebo_roscon22_notes.md  robotics_diagram.drawio  sudo_done.md
fig/: cmd_vel_usr.drawio
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/my_package/: package.xml  setup.py
ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2_ws/src/py_srvcli/: package.xml  setup.py
ros2_ws/src/tutorial_interfaces/: CMakeLists.txt
workspace/: ur5_rg2arm_base_linkwrist_3_link_5000_1.000000_1.000000.ikcache
workspace/src/custom_srv_maxime/: CMakeLists.txt  package.xml
workspace/src/custom_srv_maxime/srv/: TargetPos.srv  Velocity.srv
workspace/src/hello_moveit/: CMakeLists.txt  package.xml
workspace/src/hello_moveit/src/: hello_moveit.cpp
workspace/src/mobile_robot_maxime/: package.xml  setup.cfg  setup.py
workspace/src/mobile_robot_maxime/config/: command_vel_example.yaml
workspace/src/mobile_robot_maxime/launch/: cmd_vel_pub.launch.py  default.launch.py  demo.launch.py  nav.launch.py  secured_cmd.launch.py
workspace/src/mobile_robot_maxime/mobile_robot_maxime/: keyboard.py  (+4 more)
workspace/src/navigation_maxime/: package.xml  setup.cfg  setup.py
workspace/src/robot_description/: CMakeLists.txt  package.xml
workspace/src/ur5_moveit_config/: .setup_assistant  package.xml
workspace/src/ur5_planning/: package.xml  setup.cfg  setup.py
workspace/src/ur_no_ee_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+55 files in other folders)
